# data-agents-copilot

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  Data_Agents_Guia_Setup_e_Uso.docx  LICENSE  Makefile  Manual_Relatorio_Tecnico_ Projeto_Data_Agents.md  Manual_Relatorio_Tecnico_Projeto_Data_Agents.md  PRODUCT.md  README.md  databricks.yml  fabric_environment.yml  main.py  monitor.sh  pyproject.toml  start.sh  start_chainlit.sh  switch-env.sh
.chainlit/: config.toml
.chainlit/translations/: pt-BR.json
.claude/: CLAUDE.md  scheduled_tasks.json  settings.local.json
.claude/commands/: add-agent.md  add-mcp.md  analyze-project.md
.github/workflows/: cd.yml  ci.yml
agents/: base.py  cache_prefix.md  delegation.py  delegation_map.yaml  health.py  loader.py  mlflow_wrapper.py  sift_integration.py  siftools_integration.py  supervisor.py
agents/definitions/: pipeline_architect.py  spark_expert.py  sql_expert.py
agents/prompts/: pipeline_architect_prompt.py  spark_expert_prompt.py  sql_expert_prompt.py  supervisor_prompt.py
agents/registry/: _template.md  business-analyst.md  business-monitor.md  data-quality-steward.md  data_quality.md  databricks_ai.md  dbt-expert.md  dbt_expert.md  devops_engineer.md  fabric_expert.md  geral.md  governance-auditor.md  governance_auditor.md  migration-expert.md  naming_guard.md  pipeline-architect.md  pipeline_architect.md  python-expert.md  python_expert.md  qa_reviewer.md  semantic-modeler.md  skill-updater.md  spark-expert.md  spark_expert.md  sql-expert.md  sql_expert.md  supervisor.md
agents/tools/: __init__.py  common.py  databricks.py  fabric.py  filesystem.py  git.py
cli/: main.py  menu.py  repl.py
commands/: __init__.py  geral.py  monitor.py  parser.py  party.py  sessions.py  workflow.py
compression/: __init__.py  constants.py  hook.py  metrics.py  strategies.py
config/: commands.yaml  exceptions.py  logging_config.py  mcp_servers.py  monitor_daemon.pid  monitor_manifest.yaml  settings.py  snapshot.py
databricks_project/resources/: medallion_orchestrated_job.job.yml  orchestrated_medallion_job.job.yml
evals/: __init__.py  canonical_queries.yaml  runner.py
hooks/: audit_hook.py  checkpoint.py  context_budget_hook.py  cost_guard_hook.py  memory_hook.py  output_compressor.py  output_compressor_hook.py  security_hook.py  session_lifecycle.py  session_logger.py  transcript_hook.py  workflow_tracker.py
integrations/: fabricgov.py
kb/: README.md  collaboration-workflows.md  constitution.md  task_routing.md
kb/data-quality/: drift-detection.md  expectations-patterns.md  index.md  monitoring-alerts.md  profiling-rules.md  sla-contracts.md
kb/databricks/: ai-ml-patterns.md  bundles-cicd.md  compute-patterns.md  index.md  jobs-workflows-patterns.md  unity-catalog-rules.md
kb/fabric/: cross-platform-shortcuts.md  data-factory-patterns.md  direct-lake-rules.md  index.md  lakehouse-patterns.md  rti-eventhouse-patterns.md
kb/governance/: access-control-patterns.md  audit-procedures.md  compliance-checklist.md  index.md  lineage-documentation.md  pii-classification.md
kb/industry/: agribusiness.md  education.md  energy.md  financial-services.md  healthcare.md  index.md  insurance.md  logistics.md  manufacturing.md  retail.md  telecom.md
kb/migration/: index.md
kb/pipeline-design/: cross-platform-patterns.md  index.md  medallion-architecture.md  orchestration-patterns.md  star-schema-design.md
kb/semantic-modeling/: dax-best-practices.md  direct-lake-optimization.md  index.md  metric-views-databricks.md  reporting-patterns.md  semantic-model-patterns.md
kb/shared/: anti-patterns.md
kb/spark-patterns/: delta-lake-operations.md  index.md  (+3 more)
memory/: compiler.py  decay.py  extractor.py  lint.py  retrieval.py  store.py  telemetry.py  types.py
monitoring/: app.py  generate.py
orchestrator/: models.py  qa_orchestrator.py
resources/: jobs.yml
scripts/: analyze_tool_coverage.py  bootstrap.py  demo.py  monitor_daemon.py  refresh_skills.py  skill_stats.py
skills/: data_quality.md  pipeline_design.md  spark_patterns.md  sql_generation.md  star_schema_design.md
tasks/: create_gold_notebooks_simple.yaml  execute_test_single.yaml  gold_modelagem_step1_discover.yaml  gold_modelagem_step2_create_notebooks.yaml  gold_modelagem_step3_execute_validate.yaml  gold_modelagem_unified.yaml
templates/: README.md  backlog.md  cross-platform-spec.md  pipeline-spec.md  star-schema-spec.md
tests/: test_agent_preload.py  test_agents.py  test_base.py  test_bootstrap.py  test_checkpoint.py  test_commands.py  test_config_snapshot.py  test_context_budget_hook.py  test_databricks_genie_server.py  test_delegation.py  test_evals.py  test_exceptions.py  test_fabric_semantic_server.py  test_fabric_sql_server.py  test_functional.py  test_hooks.py  test_mcp_configs.py  test_memory_hook.py  test_memory_lint_stale.py  test_memory_retrieval.py  test_memory_store_stale.py  test_memory_types.py  test_migration_source_server.py  test_mlflow_wrapper.py  test_monitor.py  test_native_skills.py  test_output_compressor.py  test_refresh_skills_batch.py  test_session_lifecycle.py  test_session_logger.py  test_sessions_command.py  test_settings.py  test_siftools_integration.py  test_summarizer.py  test_supervisor.py  test_tools.py  test_transcript_hook.py  test_workflow.py
tools/: databricks_health_check.py  fabric_health_check.py
ui/: chainlit_app.py  chat.py  exporter.py  ui_config.py
utils/: frontmatter.py  monitor_alerter.py  summarizer.py  tokenizer.py
wiki/: index.md
workflow/: __init__.py  dag.py  executor.py  tracker.py
(+148 files in other folders)
