[project]
name = "data-agents"
version = "1.0.0"
description = "Sistema Multi-Agentes para Engenharia, Qualidade, Governança e Análise de Dados — Databricks + Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core — Claude Agent SDK
    "claude-agent-sdk>=0.1.48",

    # Anthropic SDK direto — usado por utils/summarizer.py (Haiku via Messages API)
    # e scripts/refresh_skills.py (web_search nativo). Não é dependência transitiva
    # garantida do claude-agent-sdk.
    "anthropic>=0.39.0",

    # MCP Servers
    "databricks-mcp-server>=0.4.4",
    "microsoft-fabric-rti-mcp>=0.1.0",

    # Databricks Enterprise & MLOps
    "databricks-sdk>=0.20.0",
    "mlflow>=2.11.0",

    # Microsoft Fabric & Identity
    "azure-identity>=1.15.0",
    "semantic-link>=0.1.0",

    # Fabric SQL Analytics Endpoint — MCP customizado (fabric_sql)
    # Conecta via TDS ao SQL Endpoint, resolvendo limitação do schema dbo da REST API.
    # Requer ODBC Driver 18 no sistema:
    #   macOS: brew install msodbcsql18
    #   Linux: https://learn.microsoft.com/sql/connect/odbc/linux-mac/installing-the-microsoft-odbc-driver-for-sql-server
    "pyodbc>=5.0",

    # Migration Source — MCP customizado (migration_source)
    # Conecta a bancos de origem (SQL Server e PostgreSQL) para extração de DDL e metadados.
    # pyodbc já incluso acima (SQL Server). psycopg2-binary para PostgreSQL.
    "psycopg2-binary>=2.9",

    # Configuração
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Output formatado
    "rich>=13.0",

    # Export de conversas (HTML) — usado pela UI Chainlit (/export)
    # PDF: abrir o HTML no browser e usar Cmd+P → Salvar como PDF
    "markdown2>=2.4",

    # Business Monitor — scheduler autônomo (monitor_daemon.py)
    "apscheduler>=3.10",
    "pyyaml>=6.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
]
monitoring = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "pyyaml>=6.0",
]
ui = [
    "chainlit>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
data-agents = "main:main"
fabric-sql-mcp = "mcp_servers.fabric_sql.server:main"
fabric-semantic-mcp = "mcp_servers.fabric_semantic.server:main"
databricks-genie-mcp = "mcp_servers.databricks_genie.server:main"
migration-source-mcp = "mcp_servers.migration_source.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "/config",
    "/agents",
    "/mcp_servers",
    "/hooks",
    "/commands",
    "/skills",
    "/kb",
    "/tools",
    "/tests",
    "/main.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "skills/",  # Reference/example files from external sources — not project code
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "claude_agent_sdk.*",
    "rich.*",
    "databricks.*",
    "azure.*",
    "pydantic_settings.*",
    "semantic_link.*",
    "siftools.*",
]
ignore_missing_imports = true
